test/errors/identifiers_error/zs/prefix_zserio/parameter_name_error.zs
package prefix_zserio.parameter_name_error;

struct Test(uint32 paramZserio)
{
    bool b;
};

struct TestZserio(string zserioParam) // zserio prefix!
{
    uint32 field;
};
